--- a/landingPage/css/project.css
+++ b/landingPage/css/project.css
@@ -1,9 +1,11 @@
 @import url(common.css);
+body {
+  overflow-x: hidden;
+  overflow-y: hidden; }
+
 #total {
   width: 100%;
-  height: 100vh;
-  overflow-X: hidden;
-  overflow-Y: hidden; }
+  height: 100vh; }
 
 header {
   position: absolute;
@@ -109,8 +111,7 @@ section {
       section .container .left_con .left_text {
         position: absolute;
         left: 27%;
-        top: 20%;
-        padding: 2% 8% 0 0; }
+        top: 20%; }
         section .container .left_con .left_text strong {
           font-size: 3em;
           margin-top: 10px; }
@@ -133,7 +134,7 @@ section {
         section .container .left_con .left_text .controler {
           width: 80%;
           display: flex;
-          justify-content: space-around;
+          justify-content: space-between;
           position: absolute;
           left: 0%;
           bottom: -20%;
@@ -149,13 +150,13 @@ section {
           section .container .left_con .left_text .controler figure img {
             margin-top: 10px; }
           section .container .left_con .left_text .controler .cont_btn {
-            position: absolute;
-            width: 60px;
-            right: -160px;
-            top: -110px;
+            position: fixed;
+            width: 72px;
+            left: 43%;
+            top: 50%;
             background-color: #f95959;
-            height: 35px;
-            padding: 1%;
+            height: 43px;
+            padding: 0%;
             border-radius: 50px; }
             section .container .left_con .left_text .controler .cont_btn span {
               display: none;
@@ -186,17 +187,14 @@ section {
       section .container .right_con .mobile {
         position: absolute;
         left: 26%;
-        top: 62%; }
+        top: 62%;
+        z-index: 10; }
       section .container .right_con figure > img:nth-of-type(2) {
         z-index: 1; }
       section .container .right_con figure div {
         overflow: hidden; }
-      section .container .right_con figure div:nth-of-type(1) {
-        position: absolute;
-        left: 31%;
-        top: 31.8%;
-        width: 45.5%;
-        height: 30%; }
+        section .container .right_con figure div img {
+          width: 100%; }
       section .container .right_con figure div:nth-of-type(1):after {
         content: '';
         width: 0%;
@@ -251,6 +249,12 @@ section {
         top: 0;
         background-color: #000;
         transition: .4s; }
+      section .container .right_con figure div:nth-of-type(1) {
+        position: absolute;
+        left: 31%;
+        top: 31.8%;
+        width: 45.5%;
+        height: 30%; }
       section .container .right_con figure div:nth-of-type(2) {
         position: absolute;
         left: 66%;
@@ -260,7 +264,7 @@ section {
         left: 26.3%;
         top: 63%; }
       section .container .right_con figure div img {
-        height: 100%; }
+        width: 100%; }
       section .container .right_con figure.active div:nth-of-type(1):after {
         content: '';
         width: 50%;
@@ -268,7 +272,8 @@ section {
         position: absolute;
         left: 0;
         top: 0;
-        background-color: #000; }
+        background-color: #000;
+        transition: .4s; }
       section .container .right_con figure.active div:nth-of-type(1):before {
         content: '';
         width: 50%;
@@ -276,7 +281,8 @@ section {
         position: absolute;
         right: 0;
         top: 0;
-        background-color: #000; }
+        background-color: #000;
+        transition: .4s; }
       section .container .right_con figure.active div:nth-of-type(2):after {
         content: '';
         width: 50%;
@@ -284,7 +290,8 @@ section {
         position: absolute;
         left: 0;
         top: 0;
-        background-color: #000; }
+        background-color: #000;
+        transition: .4s; }
       section .container .right_con figure.active div:nth-of-type(2):before {
         content: '';
         width: 50%;
@@ -292,7 +299,8 @@ section {
         position: absolute;
         right: 0;
         top: 0;
-        background-color: #000; }
+        background-color: #000;
+        transition: .4s; }
       section .container .right_con figure.active div:nth-of-type(3):after {
         content: '';
         width: 50%;
@@ -300,7 +308,8 @@ section {
         position: absolute;
         left: 0;
         top: 0;
-        background-color: #000; }
+        background-color: #000;
+        transition: .4s; }
       section .container .right_con figure.active div:nth-of-type(3):before {
         content: '';
         width: 50%;
@@ -308,7 +317,8 @@ section {
         position: absolute;
         right: 0;
         top: 0;
-        background-color: #000; }
+        background-color: #000;
+        transition: .4s; }
     section .container .right_con.active {
       right: 0%; }
     section .container .pop_up {
@@ -376,8 +386,132 @@ footer.active {
   padding-left: 11.5%; }
 
 @media (max-width: 1024px) {
-  #total {
+  body {
     overflow-x: scroll;
-    overflow-y: scroll; } }
+    overflow-y: scroll; }
+
+  header {
+    width: 90%;
+    display: block;
+    height: 160px; }
+    header div:first-child {
+      display: flex;
+      flex-direction: row;
+      height: inherit;
+      justify-content: space-between; }
+    header .burger {
+      top: 26%;
+      padding: 0;
+      vertical-align: middle; }
+      header .burger span {
+        background-color: #000; }
+    header .burger.show {
+      top: 26%; }
+    header nav {
+      width: 100vw;
+      height: 0; }
+    header nav.show {
+      height: 100vh; }
+
+  header nav > ul {
+    display: block;
+    position: absolute;
+    left: 44%;
+    top: 35%;
+    text-align: center; }
+    header nav > ul li {
+      margin-right: 0; }
+
+  section .container .left_con .left_text {
+    left: 20%;
+    top: 20%; }
+
+  section .container .right_con .pc {
+    left: 5%;
+    top: 25%; }
+
+  section .container .right_con .pad {
+    left: 45%; }
+
+  section .container .right_con .mobile {
+    left: 15%; }
+
+  section .container .right_con figure div:nth-of-type(1) {
+    left: 7%;
+    width: 85.5%;
+    height: 31.8%;
+    top: 26.8%; }
+
+  section .container .right_con figure div:nth-of-type(2) {
+    left: 46%;
+    top: 56.2%;
+    width: 52%; }
+
+  section .container .right_con figure div:nth-of-type(3) {
+    left: 15.5%; }
+
+  section .container .left_con .left_text .controler .cont_btn {
+    position: fixed;
+    width: 72px;
+    left: 41.5%;
+    top: 75%; } }
+@media (max-width: 768px) {
+  header {
+    z-index: 50; }
+
+  section .container {
+    display: block; }
+    section .container .left_con {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      left: 0;
+      top: 34%;
+      margin-top: 11%; }
+    section .container .right_con {
+      width: 100%;
+      height: 60%;
+      position: absolute;
+      z-index: 10;
+      left: 0;
+      top: 0; }
+
+  section .container .right_con .pc {
+    left: 25%;
+    top: 40%;
+    width: 50%; }
+
+  section .container .right_con .pad {
+    left: 62%;
+    top: 77%;
+    width: 25%; }
+
+  section .container .right_con .mobile {
+    left: 16%;
+    top: 84%;
+    width: 6%; }
+
+  section .container .right_con figure div:nth-of-type(1) {
+    left: 26%;
+    width: 48.5%;
+    height: 40.8%;
+    top: 42.3%; }
+
+  section .container .right_con figure div:nth-of-type(2) {
+    left: 63%;
+    top: 78.3%;
+    width: 23%; }
+
+  section .container .right_con figure div:nth-of-type(3) {
+    left: 16.2%;
+    top: 84.6%;
+    width: 5.7%; }
+
+  footer.active {
+    width: 100%;
+    position: absolute;
+    margin: 0 auto;
+    padding-left: 0;
+    top: 140%; } }
 
 /*# sourceMappingURL=project.css.map */
