--- a/landingPage/css/project.css
+++ b/landingPage/css/project.css
@@ -110,8 +110,10 @@ section {
         color: #fff; }
       section .container .left_con .left_text {
         position: absolute;
-        left: 27%;
-        top: 20%; }
+        width: 60%;
+        left: 25%;
+        top: 20%;
+        padding: 0 5%; }
         section .container .left_con .left_text strong {
           font-size: 3em;
           margin-top: 10px; }
@@ -132,11 +134,11 @@ section {
           padding: 2%;
           margin-top: 11%; }
         section .container .left_con .left_text .controler {
-          width: 80%;
+          width: 70%;
           display: flex;
           justify-content: space-between;
           position: absolute;
-          left: 0%;
+          left: 7%;
           bottom: -20%;
           z-index: 5; }
           section .container .left_con .left_text .controler > img {
@@ -148,16 +150,20 @@ section {
             font-size: 1em;
             margin-top: 10px; }
           section .container .left_con .left_text .controler figure img {
-            margin-top: 10px; }
+            margin-top: 10px;
+            margin-right: 20px; }
           section .container .left_con .left_text .controler .cont_btn {
             position: fixed;
-            width: 72px;
-            left: 43%;
+            width: 100px;
+            left: 42.5%;
             top: 50%;
             background-color: #f95959;
-            height: 43px;
+            height: 60px;
             padding: 0%;
-            border-radius: 50px; }
+            border-radius: 50px;
+            opacity: 0;
+            transition: .5s;
+            transition-delay: .5s; }
             section .container .left_con .left_text .controler .cont_btn span {
               display: none;
               transition: .5s;
@@ -166,8 +172,24 @@ section {
               top: 6px; }
             section .container .left_con .left_text .controler .cont_btn span.active {
               display: block; }
+              section .container .left_con .left_text .controler .cont_btn span.active img {
+                margin-left: 20px;
+                margin-top: 15px;
+                width: 16px;
+                height: 16px; }
     section .container .left_con.active {
       left: 0; }
+      section .container .left_con.active .controler .cont_btn {
+        position: fixed;
+        width: 100px;
+        height: 60px;
+        padding: 0%;
+        background-color: #f95959;
+        left: 42.5%;
+        top: 50%;
+        opacity: 1;
+        transition: .5s;
+        transition-delay: .5s; }
     section .container .right_con {
       width: 55%;
       position: relative;
@@ -424,7 +446,12 @@ footer.active {
 
   section .container .left_con .left_text {
     left: 20%;
-    top: 20%; }
+    top: 20%;
+    height: 58%; }
+    section .container .left_con .left_text strong {
+      font-size: 2.5em; }
+    section .container .left_con .left_text .controler {
+      width: 90%; }
 
   section .container .right_con .pc {
     left: 5%;
@@ -452,12 +479,23 @@ footer.active {
 
   section .container .left_con .left_text .controler .cont_btn {
     position: fixed;
-    width: 72px;
-    left: 41.5%;
-    top: 75%; } }
+    width: 57px;
+    left: 42.5%;
+    top: 65%;
+    height: 34px; } }
 @media (max-width: 768px) {
   header {
+    width: 95%;
     z-index: 50; }
+    header > div:first-child {
+      height: 100px; }
+      header > div:first-child img {
+        width: 100px;
+        height: 100px; }
+    header .burger {
+      right: 10%; }
+    header nav ul {
+      left: 40%; }
 
   section .container {
     display: block; }
@@ -472,7 +510,7 @@ footer.active {
       width: 100%;
       height: 60%;
       position: absolute;
-      z-index: 10;
+      z-index: 2;
       left: 0;
       top: 0; }
 
@@ -507,11 +545,86 @@ footer.active {
     top: 84.6%;
     width: 5.7%; }
 
+  section .container .left_con .left_text .controler .cont_btn {
+    position: fixed;
+    width: 57px;
+    left: 46%;
+    top: 20%;
+    height: 34px;
+    z-index: 50; }
+
+  section .container .left_con .left_text {
+    text-align: center;
+    left: 15%;
+    top: 25%; }
+
+  section .container .left_con .left_text .controler {
+    left: 14%;
+    bottom: -14%; }
+
   footer.active {
     width: 100%;
     position: absolute;
     margin: 0 auto;
     padding-left: 0;
     top: 140%; } }
+@media (max-width: 480px) {
+  section .container .left_con {
+    width: 100%;
+    height: 75%;
+    position: absolute;
+    left: 0;
+    top: 25%;
+    margin-top: 0%; }
+    section .container .left_con .left_text {
+      top: 24%;
+      height: 55%; }
+    section .container .left_con ul {
+      display: none; }
+
+  section .container .left_con .left_text .controler {
+    left: 10%; }
+    section .container .left_con .left_text .controler .left_text span {
+      margin-top: 50px; }
+
+  section .container .left_con .left_text .controler .cont_btn {
+    display: none; }
+
+  section .container .right_con {
+    height: 40%; }
+
+  section .container .right_con .pc {
+    left: 25%;
+    top: 44%;
+    width: 50%; }
+
+  section .container .right_con .pad {
+    left: 62%;
+    top: 79%;
+    width: 25%; }
+
+  section .container .right_con .mobile {
+    left: 26%;
+    top: 88%;
+    width: 6%; }
+
+  section .container .right_con figure div:nth-of-type(1) {
+    left: 26%;
+    width: 48.5%;
+    height: 38.8%;
+    top: 46.3%; }
+
+  section .container .right_con figure div:nth-of-type(2) {
+    left: 63%;
+    top: 80.3%;
+    width: 23%; }
+
+  section .container .right_con figure div:nth-of-type(3) {
+    left: 26.2%;
+    top: 89.6%;
+    width: 5.7%; }
+
+  footer.active {
+    top: 94%; } }
 
 /*# sourceMappingURL=project.css.map */
