--- a/landingPage/css/project.scss
+++ b/landingPage/css/project.scss
@@ -120,8 +120,10 @@ section{
             }
             & .left_text{
                 position:absolute;
-                left:27%;
+                width:60%;
+                left:25%;
                 top:20%;
+                padding:0 5%;
                 & strong{
                     font-size:3em;
                     margin-top:10px;
@@ -154,11 +156,11 @@ section{
                    
                 }
                 & .controler{
-                    width:80%;
+                    width:70%;
                     display:flex;
                     justify-content: space-between;
                     position:absolute;
-                    left:0%;
+                    left:7%;
                     bottom:-20%;
                     z-index:5;
                     & > img{
@@ -173,16 +175,21 @@ section{
                     }
                     & figure img{
                         margin-top:10px;
+                        margin-right:20px;
                     }
+                   
                     & .cont_btn{
                         position:fixed;
-                        width:72px;
-                        left:43%;
+                        width:100px;
+                        left:42.5%;
                         top:50%;
                         background-color:#f95959;
-                        height:43px;
+                        height:60px;
                         padding:0%;
                         border-radius:50px;
+                        opacity:0;
+                        transition:.5s;
+                        transition-delay:.5s;
                         & span{
                             // margin-top:10px;
                             display:none;
@@ -193,6 +200,12 @@ section{
                         }
                         & span.active{
                             display:block;
+                            & img{
+                                margin-left:20px;
+                                margin-top:15px;
+                                width:16px;
+                                height:16px;
+                            }
                         }
                     }
                 }
@@ -200,6 +213,20 @@ section{
         }
         & .left_con.active{
             left:0;
+            .controler{
+                & .cont_btn{
+                    position:fixed;
+                    width:100px;
+                    height:60px;
+                    padding:0%;
+                    background-color:#f95959;
+                    left:42.5%;
+                    top:50%;
+                    opacity:1;
+                    transition:.5s;
+                    transition-delay:.5s;
+                }
+            }
         }
         & .right_con{
             @include w100($wid:55%);
@@ -441,10 +468,17 @@ footer.active{
             margin-right:0;
         }
     }
-    
+
     section .container .left_con .left_text{
         left:20%;
         top:20%;
+        height:58%;
+        & strong{
+            font-size:2.5em;
+        }
+        & .controler{
+            width:90%;
+        }
     }
 
     section .container .right_con .pc{
@@ -474,15 +508,30 @@ footer.active{
     }
     section .container .left_con .left_text .controler .cont_btn {
         position: fixed;
-        width: 72px;
-        left: 41.5%;
-        top: 75%;
+        width: 57px;
+        left: 42.5%;
+        top: 65%;
+        height:34px;
     }
 
 }
 @media(max-width:768px){
     header{
+        width:95%;
         z-index:50;
+        & > div:first-child{
+            height:100px;
+            img{
+                width:100px;
+                height:100px;
+            }
+        }
+        & .burger{
+            right:10%;
+        }
+        & nav ul{
+            left:40%;
+        }
     }
     section .container{
         display:block;
@@ -500,7 +549,7 @@ footer.active{
             width:100%;
             height:60%;
             position:absolute;
-            z-index:10;
+            z-index:2;
             left:0;
             top:0;
         }
@@ -537,6 +586,27 @@ footer.active{
         top: 84.6%;
         width: 5.7%;
     }
+    section .container .left_con .left_text .controler .cont_btn {
+        position: fixed;
+        width: 57px;
+        left: 46%;
+        top: 20%;
+        height:34px;
+        z-index:50;
+    }
+    section .container .left_con .left_text{
+        text-align:center;
+        left:15%;
+        top:25%;
+    }
+    section .container .left_con .left_text .controler {
+        
+       
+        left: 14%;
+        bottom:-14%;
+        
+       
+    }
     footer.active{
         width:100%;
         position:absolute;
@@ -546,5 +616,68 @@ footer.active{
     }
 }
 @media(max-width:480px){
+    section .container .left_con {
+        width: 100%;
+        height: 75%;
+        position: absolute;
+        left: 0;
+        top: 25%;
+        margin-top: 0%;
 
+        & .left_text{
+            top:24%;
+            height:55%;
+        }
+        & ul{
+            display:none;
+        }
+    }
+    section .container .left_con .left_text .controler{
+        left:10%;
+        & .left_text{
+            span{
+                margin-top:50px;
+            }
+        }
+    }
+    section .container .left_con .left_text .controler .cont_btn {
+        display:none;
+    }
+    section .container .right_con{
+        height:40%;
+    }
+    section .container .right_con .pc {
+        left: 25%;
+        top: 44%;
+        width:50%;
+    }
+    section .container .right_con .pad {
+        left: 62%;
+        top: 79%;
+        width:25%;
+    }
+    section .container .right_con .mobile {
+        left: 26%;
+        top: 88%;
+        width:6%;
+    }
+    section .container .right_con figure div:nth-of-type(1) {
+        left: 26%;
+        width: 48.5%;
+        height: 38.8%;
+        top: 46.3%;
+    }
+    section .container .right_con figure div:nth-of-type(2) {
+        left: 63%;
+        top: 80.3%;
+        width: 23%;
+    }
+    section .container .right_con figure div:nth-of-type(3) {
+        left: 26.2%;
+        top: 89.6%;
+        width: 5.7%;
+    }
+    footer.active{
+        top:94%;
+    }
 }
