--- a/landingPage/css/list.css
+++ b/landingPage/css/list.css
@@ -1,171 +1,287 @@
-@import url(common.css);
+@charset "UTF-8";
+@import url(c:\Users\leemi\OneDrive\문서\GitHub\landingpage\landingPage\css\common.css);
 #total {
   width: 100%;
   height: 100vh;
   overflow-X: hidden;
-  overflow-Y: hidden; }
+  overflow-Y: hidden;
+}
 
 header {
   position: absolute;
   z-index: 10;
   height: 80%;
-  padding: 2%; }
-  header div:first-child {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    height: 100%; }
-  header .burger {
-    position: relative;
-    top: 35%;
-    padding: 20%;
-    opacity: 0;
-    transition: 1.5s; }
-    header .burger span {
-      position: absolute;
-      height: 2px;
-      background-color: #fff;
-      display: block; }
-    header .burger span:nth-of-type(1) {
-      width: 15px;
-      top: 6px; }
-    header .burger span:nth-of-type(2) {
-      width: 20px;
-      top: 12px; }
-    header .burger span:nth-of-type(3) {
-      width: 10px;
-      top: 18px; }
-  header .burger.active {
-    opacity: 1; }
-  header .burger.show {
-    z-index: 20;
-    top: 35%; }
-    header .burger.show span:nth-of-type(1) {
-      transform: translateY(7px) rotate(-45deg);
-      width: 20px; }
-    header .burger.show span:nth-of-type(2) {
-      opacity: 0; }
-    header .burger.show span:nth-of-type(3) {
-      transform: translateY(-5px) rotate(45deg);
-      width: 20px; }
-  header nav {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 0;
-    height: 100vh;
-    background-color: #000;
-    opacity: 0.7;
-    padding: 0;
-    transition: .5s ease-in-out;
-    overflow: hidden;
-    opacity: 0; }
-    header nav > ul {
-      display: flex;
-      position: absolute;
-      left: 15%;
-      top: 47%; }
-      header nav > ul li {
-        margin: 0 45% 0 0; }
-        header nav > ul li a {
-          color: #fff;
-          font-size: 2em; }
-  header nav.block {
-    display: block; }
-  header nav.show {
-    width: 100vw;
-    opacity: 0.7;
-    transition: .5s; }
+  padding: 2%;
+}
+
+header div:first-child {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+}
+
+header .burger {
+  position: relative;
+  top: 35%;
+  padding: 20%;
+  opacity: 0;
+  -webkit-transition: 1.5s;
+  transition: 1.5s;
+}
+
+header .burger span {
+  position: absolute;
+  height: 2px;
+  background-color: #fff;
+  display: block;
+}
+
+header .burger span:nth-of-type(1) {
+  width: 15px;
+  top: 6px;
+}
+
+header .burger span:nth-of-type(2) {
+  width: 20px;
+  top: 12px;
+}
+
+header .burger span:nth-of-type(3) {
+  width: 10px;
+  top: 18px;
+}
+
+header .burger.active {
+  opacity: 1;
+}
+
+header .burger.show {
+  z-index: 20;
+  top: 35%;
+}
+
+header .burger.show span:nth-of-type(1) {
+  -webkit-transform: translateY(7px) rotate(-45deg);
+          transform: translateY(7px) rotate(-45deg);
+  width: 20px;
+}
+
+header .burger.show span:nth-of-type(2) {
+  opacity: 0;
+}
+
+header .burger.show span:nth-of-type(3) {
+  -webkit-transform: translateY(-5px) rotate(45deg);
+          transform: translateY(-5px) rotate(45deg);
+  width: 20px;
+}
+
+header nav {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 0;
+  height: 100vh;
+  background-color: #000;
+  opacity: 0.7;
+  padding: 0;
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  overflow: hidden;
+  opacity: 0;
+}
+
+header nav > ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  left: 15%;
+  top: 47%;
+}
+
+header nav > ul li {
+  margin: 0 45% 0 0;
+}
+
+header nav > ul li a {
+  color: #fff;
+  font-size: 2em;
+}
+
+header nav.block {
+  display: block;
+}
+
+header nav.show {
+  width: 100vw;
+  opacity: 0.7;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
 
 section {
-  height: 100%; }
-  section .container {
-    width: 100%;
-    height: 100%;
-    display: flex; }
-    section .container .left_con {
-      position: relative;
-      width: 30%;
-      height: 100%;
-      background-color: #2c90d6;
-      transform: translateX(-100%);
-      transition: 1s; }
-      section .container .left_con > figure {
-        opacity: 0;
-        right: 0%;
-        top: 20%;
-        width: 15%;
-        padding: 3% 5%;
-        transition: 1s;
-        transition-delay: 1s; }
-      section .container .left_con > figure.active {
-        background-color: #f95959;
-        width: 15%;
-        padding: 3% 5%;
-        position: absolute;
-        right: -13%;
-        top: 20%;
-        opacity: 1;
-        z-index: 50; }
-        section .container .left_con > figure.active img {
-          width: 100%; }
-        section .container .left_con > figure.active figcaption {
-          text-align: center;
-          color: #fff; }
-    section .container .left_con.active {
-      transform: translateX(0%); }
-    section .container .right_con {
-      width: 70%;
-      position: relative;
-      opacity: 0;
-      transition: 1s;
-      transition-delay: 2s;
-      transform: translateY(10%); }
-      section .container .right_con .tab {
-        position: absolute;
-        left: 37%;
-        top: 10%;
-        display: flex;
-        opacity: 0;
-        transition: .5s; }
-        section .container .right_con .tab figure {
-          width: 5%;
-          margin: 0 8%; }
-          section .container .right_con .tab figure img {
-            width: 100%; }
-          section .container .right_con .tab figure figcaption {
-            text-align: center; }
-      section .container .right_con .tab.show {
-        top: 8%;
-        opacity: 1; }
-      section .container .right_con .right_box {
-        width: 90%;
-        display: flex;
-        flex-wrap: wrap;
-        padding: 5%;
-        margin-top: 3%; }
-        section .container .right_con .right_box > figure {
-          width: 40%;
-          padding: 5%;
-          margin-top: 5%;
-          opacity: 0;
-          transition: .5s; }
-          section .container .right_con .right_box > figure img {
-            width: 100%; }
-        section .container .right_con .right_box > figure.show {
-          margin-top: 0;
-          opacity: 1; }
-    section .container .right_con.active {
-      opacity: 1;
-      transform: translateY(0%); }
-      section .container .right_con.active .right_box > figure:nth-of-type(1) {
-        transition-delay: 3s; }
-      section .container .right_con.active .right_box > figure:nth-of-type(2) {
-        transition-delay: 3.5s; }
-      section .container .right_con.active .right_box > figure:nth-of-type(3) {
-        transition-delay: 4s; }
-      section .container .right_con.active .right_box > figure:nth-of-type(4) {
-        transition-delay: 4.5s; }
+  height: 100%;
+}
+
+section .container {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+section .container .left_con {
+  position: relative;
+  width: 30%;
+  height: 100%;
+  background-color: #2c90d6;
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+section .container .left_con > figure {
+  opacity: 0;
+  right: 0%;
+  top: 20%;
+  width: 15%;
+  padding: 3% 5%;
+  -webkit-transition: 1s;
+  transition: 1s;
+  -webkit-transition-delay: 1s;
+          transition-delay: 1s;
+}
+
+section .container .left_con > figure.active {
+  background-color: #f95959;
+  width: 15%;
+  padding: 3% 5%;
+  position: absolute;
+  right: -13%;
+  top: 20%;
+  opacity: 1;
+  z-index: 50;
+}
+
+section .container .left_con > figure.active img {
+  width: 100%;
+}
+
+section .container .left_con > figure.active figcaption {
+  text-align: center;
+  color: #fff;
+}
+
+section .container .left_con.active {
+  -webkit-transform: translateX(0%);
+          transform: translateX(0%);
+}
+
+section .container .right_con {
+  width: 70%;
+  position: relative;
+  opacity: 0;
+  -webkit-transition: 1s;
+  transition: 1s;
+  -webkit-transition-delay: 2s;
+          transition-delay: 2s;
+  -webkit-transform: translateY(10%);
+          transform: translateY(10%);
+}
+
+section .container .right_con .tab {
+  position: absolute;
+  left: 37%;
+  top: 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  opacity: 0;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+section .container .right_con .tab figure {
+  width: 5%;
+  margin: 0 8%;
+}
+
+section .container .right_con .tab figure img {
+  width: 100%;
+}
+
+section .container .right_con .tab figure figcaption {
+  text-align: center;
+}
+
+section .container .right_con .tab.show {
+  top: 8%;
+  opacity: 1;
+}
+
+section .container .right_con .right_box {
+  width: 90%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 5%;
+  margin-top: 3%;
+}
+
+section .container .right_con .right_box > figure {
+  width: 40%;
+  padding: 5%;
+  margin-top: 5%;
+  opacity: 0;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+section .container .right_con .right_box > figure img {
+  width: 100%;
+}
+
+section .container .right_con .right_box > figure.show {
+  margin-top: 0;
+  opacity: 1;
+}
+
+section .container .right_con.active {
+  opacity: 1;
+  -webkit-transform: translateY(0%);
+          transform: translateY(0%);
+}
+
+section .container .right_con.active .right_box > figure:nth-of-type(1) {
+  -webkit-transition-delay: 3s;
+          transition-delay: 3s;
+}
+
+section .container .right_con.active .right_box > figure:nth-of-type(2) {
+  -webkit-transition-delay: 3.5s;
+          transition-delay: 3.5s;
+}
+
+section .container .right_con.active .right_box > figure:nth-of-type(3) {
+  -webkit-transition-delay: 4s;
+          transition-delay: 4s;
+}
+
+section .container .right_con.active .right_box > figure:nth-of-type(4) {
+  -webkit-transition-delay: 4.5s;
+          transition-delay: 4.5s;
+}
 
 footer {
   position: absolute;
@@ -174,16 +290,21 @@ footer {
   text-align: center;
   opacity: 0;
   padding-left: 0%;
-  transition: 1s; }
-  footer p {
-    width: 100%;
-    color: #ddd;
-    position: relative;
-    margin: 0 auto; }
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+footer p {
+  width: 100%;
+  color: #ddd;
+  position: relative;
+  margin: 0 auto;
+}
 
 footer.active {
   opacity: 1;
   padding-left: 4%;
-  transition-delay: 1.5s; }
-
+  -webkit-transition-delay: 1.5s;
+          transition-delay: 1.5s;
+}
 /*# sourceMappingURL=list.css.map */
