--- a/landingPage/css/list.css
+++ b/landingPage/css/list.css
@@ -1,5 +1,4 @@
-@charset "UTF-8";
-@import url(c:\Users\leemi\OneDrive\문서\GitHub\landingpage\landingPage\css\common.css);
+@import url(d:\portfolio\landingPage\landingPage\css\common.css);
 #total {
   width: 100%;
   height: 100vh;
